--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -87,6 +87,15 @@ video {
   vertical-align: baseline;
 }
 
+html,
+body,
+#app {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -129,6 +138,6 @@ table {
   border-spacing: 0;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 0 !important
-}
+} */
